...
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title_beacon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:text="@string/title_beacon_name"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_body"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_beacon_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_beacon_name"
            android:inputType="text"/>

        <TextView
            style="@style/TitleTextStyle"
            android:id="@+id/text_title_advertised_id"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:text="@string/title_advertised_id"/>

        <EditText
            android:id="@+id/edit_text_advertised_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_advertised_id"
            android:inputType="text"/>

        <TextView
            style="@style/ErrorTextStyle"
            android:id="@+id/text_advertised_id_error_message"
            android:text="@string/error_message_advertised_id"/>

        <TextView
            style="@style/TitleTextStyle"
            android:id="@+id/text_title_description"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:text="@string/title_description"/>

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:inputType="text"
            android:maxLength="140"/>

        <TextView
            style="@style/TitleTextStyle"
            android:id="@+id/text_title_type"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/title_type"/>

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/types"
            android:padding="8dp"/>

        <TextView
            style="@style/TitleTextStyle"
            android:id="@+id/text_title_status"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:text="@string/title_status"/>

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/statuses"
            android:padding="8dp"/>

        <TextView
            style="@style/ErrorTextStyle"
            android:id="@+id/text_status_error_message"
            android:text="@string/error_message_status"/>

        <TextView
            style="@style/TitleTextStyle"
            android:id="@+id/text_title_stability"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:text="@string/title_stability"/>

        <Spinner
            android:id="@+id/spinner_stability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/stabilities"
            android:padding="8dp"/>

        <TextView
            style="@style/TitleTextStyle"
            android:id="@+id/text_title_location"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/title_location"/>

        <EditText
            android:id="@+id/edit_text_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_latitude"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/ErrorTextStyle"
            android:id="@+id/text_latitude_error_message"
            android:text="@string/error_message_double_value"/>

        <EditText
            android:id="@+id/edit_text_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_longitude"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/ErrorTextStyle"
            android:id="@+id/text_longitude_error_message"
            android:text="@string/error_message_double_value"/>

        <TextView
            style="@style/TitleTextStyle"
            android:id="@+id/text_title_place_id"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/title_places_id"/>

        <EditText
            android:id="@+id/edit_text_place_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_places_id"
            android:inputType="text"/>

    </LinearLayout>
...
