<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_done" android:title="@string/action_done"
          android:icon="@drawable/ic_done"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
</menu>

